2006-06-14  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #204798 , #235691 , #229132
	* e-timezone-dialog/e-timezone-dialog.c: 
	(e_timezone_dialog_add_timezones), (get_local_offset),
	(get_local_timezone), (format_utc_offset),
	(zone_display_name_with_offset), (zone_display_name),
	(on_map_motion), (e_timezone_dialog_set_timezone): Added code to set
	the timezone as default to local timezone and show the time offset in
	the map motion.

2006-06-02  Srinivasa Ragavan  <sragavan@novell.com>

	** Added a new hbox cell renderer and a new Sort By menu to e-table to
	sort by columns not shown in the table.

	* table/Makefile.am:
	* table/e-cell-text.c: (build_layout): Added support for font
	rendering in cell
	* table/e-cell-tree.c: (ect_event): Fixed a bug where the expander
	animates in arbitary position.
	* table/e-table-header-item.c: (ethi_popup_customize_view),
	(sort_by_id), (popup_custom), (ethi_header_context_menu),
	(ethi_event): Added a new Sort by menu, to the e-table headers, which
	helps to easily sort by columns without adding that column.
	* table/e-cell-hbox.[ch]: Added a new hbox renderer.

2006-01-30  Kjartan Maraas  <kmaraas@gnome.org>

	* e-timezone-dialog/e-timezone-dialog.c: (get_zone_from_point):
	* menus/gal-view-menus.c: 
	* misc/e-attachment-bar.c: (calculate_height_width),
	(update_remote_file), (e_attachment_bar_get_attachment),
	(class_init):
	* misc/e-attachment.c: (async_progress_update_cb),
	(download_to_local_path):
	* misc/e-calendar-item.c: (e_calendar_item_get_arg),
	(e_calendar_item_realize), (e_calendar_item_ensure_days_visible):
	* misc/e-calendar.c: (e_calendar_drag_motion),
	(e_calendar_drag_leave), (e_calendar_focus):
	* misc/e-canvas-background.c: (ecb_get_property):
	* misc/e-canvas.c: (e_canvas_class_init), (pick_current_item):
	* misc/e-cell-date-edit.c: (e_cell_date_edit_do_popup),
	(e_cell_date_edit_show_popup):
	* misc/e-cell-percent.c:
	* misc/e-charset-picker.c: (e_charset_picker_bonobo_ui_populate):